McsPyDataTools
==============

Version 0.2.3 (2017-__-__)
------------------------

- Migrated to Python 3


Version 0.2.2 (2017-09-19)
------------------------

- Bugfix Supported Protocol-Version for SegmentEntityInfo


Version 0.2.1 (2016-08-12)
------------------------

- Bugfix CMOSSpike class


Version 0.2 (2015-04-29)
------------------------

- support for average segments added
- improved documentation (Sphinx-based)


Version 0.1 (2014-03-27)
------------------------

- first release